--- a/test/index.html
+++ b/test/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <div class="box">
-        <img src="./images/img.jpg" alt="Image cannot be displayed properly">
-        <p>快递牛，整体不错蓝牙可以说秒连。红米给力</p>
-        <div>来自于 117384232 的评价</div>
-        <div>
+        <img class="img" src="./images/img.jpg" alt="Image cannot be displayed properly">
+        <p class="review">快递牛，整体不错蓝牙可以说秒连。红米给力</p>
+        <div class="apparaise">来自于 117384232 的评价</div>
+        <div class="info">
             <h4>
                 <a href="#">Redmi AirDots真无线蓝...</a>
             </h4>
